Update and rename traininglanding1.html to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="traininglanding1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -382,5 +382,6 @@ together.</h2>
 });
 </script>
 </body>
+
 
 </html>
